# job-data-from-email

./: .gitignore  1_pull_out_text_from_mbox.py  2_html_to_markdown.py  3_get_jobs_with_llm.py  4_put_it_into_a_csv.py  README.md  job_data.csv  job_data.ipynb  pyproject.toml
